--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Alumni
 ---
-	<h1>Reynoird Lab: {{ page.title }}</h1>
+	<h1>Reynoird Lab - {{ page.title }}</h1>
 
 <img src="https://reynoird-lab.github.io/Images/sortie_parc.jpg" alt="Reynoird lab retreat 1" width="215" /> <img src="https://reynoird-lab.github.io/Images/grenoble.jpg" width="215" /> <img src="https://reynoird-lab.github.io/Images/sortie_resto.jpg" alt="Reynoird lab retreat 2" width="215" />
 
