--- a/Publications/index.html
+++ b/Publications/index.html
@@ -4,7 +4,7 @@ title: Publications
 ---
 <meta name="description" content="Listing of the The Reynoird Lab publications in scientific journals."/>
 
-	<h1>Reynoird Lab - Publications</h1>
+	<title><h1>Reynoird Lab - Publications</h1></title>
 	
 <h2> <i> Main group publications </i> </h2>
 <p>
