--- a/Publications/index.html
+++ b/Publications/index.html
@@ -5,7 +5,9 @@ title: Publications
 <meta name="description" content="Listing of the The Reynoird Lab publications in scientific journals."/>
 
 	<h1>Reynoird Lab - Publications</h1>
-	
+
+<a href="https://pubmed.ncbi.nlm.nih.gov/?term=reynoird+N"> <img alt="PUBMED REYNOIRD" src="https://reynoird-lab.github.io/Images/PUBMED.png" align="left" style="margin: 0px 20px 20px 20px;" height="75"></a>
+
 <h2> <i> Main group publications </i> </h2>
 <p>
 <a href="https://pubmed.ncbi.nlm.nih.gov/31894745/"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, <b>Curr Protein Pept Sci</b>, 2020 </a <br>
