--- a/Publications/index.html
+++ b/Publications/index.html
@@ -6,7 +6,7 @@ title: Publications
 
 	<h1>Reynoird Lab - Publications</h1>
 
-<a href="https://pubmed.ncbi.nlm.nih.gov/?term=reynoird+N"> <img alt="PUBMED REYNOIRD" src="https://reynoird-lab.github.io/Images/PUBMED.png" align="left" style="margin: 0px 20px 20px 20px;" height="75"></a>
+<a href="https://pubmed.ncbi.nlm.nih.gov/?term=reynoird+N"> <img alt="PUBMED REYNOIRD" src="https://reynoird-lab.github.io/Images/PUBMED.png" style="margin: 0px 20px 20px 20px;" height="75"></a>
 
 <h2> <i> Delected publications </i> </h2>
 <p>
