--- a/People/index.html
+++ b/People/index.html
@@ -6,12 +6,10 @@ title: People
 
 
 <img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="215" alt="Reynoird lab 1"/> <img src="https://reynoird-lab.github.io/Images/TOM_3857.jpg" alt="Reynoird lab 2" width="215" /> <img src="https://reynoird-lab.github.io/Images/TOM_3773.jpg" alt="Reynoird lab 3" width="215" />
-<img src="https://reynoird-lab.github.io/Images/publons-logo.jpg" width="215" alt="Reynoird lab 1"/> <img src="https://reynoird-lab.github.io/Images/TOM_3857.jpg" alt="Reynoird lab 2" width="215" /> <img src="https://reynoird-lab.github.io/Images/TOM_3773.jpg" alt="Reynoird lab 3" width="215" />
 
 <br>
 <p><br>
-<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Nicolas REYNOIRD, PhD:</b> <br><i>Group Leader</i><br></p>  
-<br>  
+<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Nicolas REYNOIRD, PhD:</b> <br><i>Group Leader</i></p>  
 <a href="https://publons.com/researcher/3858992/nicolas-reynoird/"> <img alt="Publons Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/publons-logo.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <br>  
 <br>
 <a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Tanveer Ahmad, PhD: </b><br><i>Postdoc</i><br></p>
