--- a/People/index.html
+++ b/People/index.html
@@ -16,6 +16,8 @@ title: People
 <br>  
 <a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> </a> <p><b>Alexandre Casanova: </b><br><i>PhD student</i><br></p> 
 <br>
+<img alt="NEH" src="https://reynoird-lab.github.io/Images/Nour_Hussein.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Nour Jamal El Hussein: </b><br><i>Master 2 student</i><br></p> 
+<br>
 <a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Jessica Vayr: </b><br><i>Technician</i><br></p> 
 <br> <br> <br> <br> <br>  
 </p>
