--- a/Publications/index.html
+++ b/Publications/index.html
@@ -8,7 +8,7 @@ title: Publications
 
 <a href="https://pubmed.ncbi.nlm.nih.gov/?term=reynoird+N"> <img alt="PUBMED REYNOIRD" src="https://reynoird-lab.github.io/Images/PUBMED.png" style="margin: 0px 20px 20px 20px;" height="75"></a>
 
-<h2> <i> Delected publications </i> </h2>
+<h2> <i> Selected publications </i> </h2>
 <p>
 <a href="https://pubmed.ncbi.nlm.nih.gov/31894745/"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, <b>Curr Protein Pept Sci</b>, 2020 </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/29076964/"> - Lysine methylation signaling in pancreatic cancer, G Roth, A Casanova, N Lemonnier and N Reynoird, <b>Curr opin oncol</b>, 2018 </a <br>
