--- a/Publications/index.html
+++ b/Publications/index.html
@@ -10,7 +10,7 @@ title: Publications
 
 <h2> <i> Selected publications </i> </h2>
 <p>
-<a href="https://pubmed.ncbi.nlm.nih.gov/31894745/"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, <b>Curr Protein Pept Sci</b>, 2020 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/31894745/" style="color:black;" style="bold;"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, <b>Curr Protein Pept Sci</b>, 2020 </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/29076964/"> - Lysine methylation signaling in pancreatic cancer, G Roth, A Casanova, N Lemonnier and N Reynoird, <b>Curr opin oncol</b>, 2018 </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/30713830/"> - Novel insights into the oncogenic function of the SMYD3 lysine methyltransferase, P Mazur, O Gozani, J Sage and N Reynoird, <b>Transl Cancer Res.</b>, 2016 </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/26988419/"> - Coordination of stress signals by the lysine methyltransferase SMYD2 promotes pancreatic cancer, N Reynoird*, P Mazur* et al., <b>Gene & Dev</b>, 2016. *equal contribution </a <br>
