--- a/Publications/index.html
+++ b/Publications/index.html
@@ -10,23 +10,23 @@ title: Publications
 
 <h2> <i> Selected publications </i> </h2>
 <p>
-<a href="https://pubmed.ncbi.nlm.nih.gov/31894745/" style="color:DARKSLATEBLUE;"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, <b>Curr Protein Pept Sci</b>, 2020 </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/29076964/" style="color:MIDNIGHTBLUE;"> - Lysine methylation signaling in pancreatic cancer, G Roth, A Casanova, N Lemonnier and N Reynoird, <b>Curr opin oncol</b>, 2018 </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/30713830/" style="color:DARKGREEN;"> - Novel insights into the oncogenic function of the SMYD3 lysine methyltransferase, P Mazur, O Gozani, J Sage and N Reynoird, <b>Transl Cancer Res.</b>, 2016 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/31894745/" style="color:DARKSLATEGRAY;"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, <b>Curr Protein Pept Sci</b>, 2020 </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/29076964/" style="color:DARKSLATEGRAY;"> - Lysine methylation signaling in pancreatic cancer, G Roth, A Casanova, N Lemonnier and N Reynoird, <b>Curr opin oncol</b>, 2018 </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/30713830/" style="color:DARKSLATEGRAY;"> - Novel insights into the oncogenic function of the SMYD3 lysine methyltransferase, P Mazur, O Gozani, J Sage and N Reynoird, <b>Transl Cancer Res.</b>, 2016 </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/26988419/" style="color:DARKSLATEGRAY;"> - Coordination of stress signals by the lysine methyltransferase SMYD2 promotes pancreatic cancer, N Reynoird*, P Mazur* et al., <b>Gene & Dev</b>, 2016. *equal contribution </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/25795785/"> - A Proteomic Strategy Identifies Lysine Methylation of Splicing Factor snRNP70 by SETMAR, SM Carlson, KE Moore, SM Sankaran, N Reynoird, et al., <b>J Biol Chem</b>, 2015 </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/24847881/"> - SMYD3 links lysine methylation of MAP3K2 to Ras-driven cancer, P Mazur*, N Reynoird* et al., <b>Nature</b>, 2014. *equal contribution </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/22419068/"> - SMYD3 regulates cancer cell phenotypes and catalyses histone H4 lysine 5 methylation, G Van Aller*, N Reynoird*, O Barbash* et al., <b>Epigenetics</b>, 2012 *equal contribution </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/25795785/" style="color:DARKSLATEGRAY;"> - A Proteomic Strategy Identifies Lysine Methylation of Splicing Factor snRNP70 by SETMAR, SM Carlson, KE Moore, SM Sankaran, N Reynoird, et al., <b>J Biol Chem</b>, 2015 </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/24847881/" style="color:DARKSLATEGRAY;"> - SMYD3 links lysine methylation of MAP3K2 to Ras-driven cancer, P Mazur*, N Reynoird* et al., <b>Nature</b>, 2014. *equal contribution </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/22419068/" style="color:DARKSLATEGRAY;"> - SMYD3 regulates cancer cell phenotypes and catalyses histone H4 lysine 5 methylation, G Van Aller*, N Reynoird*, O Barbash* et al., <b>Epigenetics</b>, 2012 *equal contribution </a <br>
 </p>
 <br>
 <h2> <i> Other publications </i> </h2>
 <p>
-<a href="https://pubmed.ncbi.nlm.nih.gov/30257209/"> - Nut Directs p300-Dependent, Genome-Wide H4 Hyperacetylation in Male Germ Cells, H Shiota, S Barral, T Buchou, M Tan, Y Couté, G Charbonnier, N Reynoird, et al., <b>Cell Rep.</b>, 2018 </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/28710461/"> - Bromodomain factors of BET family are new essential actors of pericentric heterochromatin transcriptional activation in response to heat shock, E Col, N Hoghoughi, S Dufour, J Penin, S Koskas, V Faure, M Ouzounova, H Hernandez-Vargash, N Reynoird, et al., <b>Sci. Rep.</b>, 2017 </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/24950375/"> - Nuclear PI5P, Uhrf1, and the Road Not Taken, N Reynoird & O Gozani, Mol Cell, 2014. Previe </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/21447744/"> - Differentiation of NUT Midline Carcinoma by Epigenomic Reprogramming, B Schwartz, M Hofer, M Lemieux, D Bauer, M Cameron, N West, E Agoston, N Reynoird et al., <b>Cancer Research</b>, 2011 </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/20676058/"> - Oncogenesis by sequestration of CBP/p300 in transcriptionally inactive hyperacetylated chromatin domains, N Reynoird et al., <b>EMBO J</b>, 2010 </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/21208144/"> - Molecular models for post-meiotic male genome reprogramming, S Rousseaux, F Boussouar, J Gaucher, N Reynoird, et al., <b>Systems Biology in Reproductive Medicine</b>, 2010 </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/20015078/"> - From meiosis to postmeiotic events: The secrets of histone disappearance, J Gaucher, N Reynoird, et al., <b>FEBS J</b>, 2010. Review </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/18413057/"> - Epigenetic reprogramming of the male genome during gametogenesis and in the zygote, S Rousseaux, N Reynoird, et al., <b>Reprod Biomed Online</b>, 2008. Review </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/30257209/" style="color:DARKSLATEGRAY;"> - Nut Directs p300-Dependent, Genome-Wide H4 Hyperacetylation in Male Germ Cells, H Shiota, S Barral, T Buchou, M Tan, Y Couté, G Charbonnier, N Reynoird, et al., <b>Cell Rep.</b>, 2018 </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/28710461/" style="color:DARKSLATEGRAY;"> - Bromodomain factors of BET family are new essential actors of pericentric heterochromatin transcriptional activation in response to heat shock, E Col, N Hoghoughi, S Dufour, J Penin, S Koskas, V Faure, M Ouzounova, H Hernandez-Vargash, N Reynoird, et al., <b>Sci. Rep.</b>, 2017 </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/24950375/" style="color:DARKSLATEGRAY;"> - Nuclear PI5P, Uhrf1, and the Road Not Taken, N Reynoird & O Gozani, Mol Cell, 2014. Previe </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/21447744/" style="color:DARKSLATEGRAY;"> - Differentiation of NUT Midline Carcinoma by Epigenomic Reprogramming, B Schwartz, M Hofer, M Lemieux, D Bauer, M Cameron, N West, E Agoston, N Reynoird et al., <b>Cancer Research</b>, 2011 </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/20676058/" style="color:DARKSLATEGRAY;"> - Oncogenesis by sequestration of CBP/p300 in transcriptionally inactive hyperacetylated chromatin domains, N Reynoird et al., <b>EMBO J</b>, 2010 </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/21208144/" style="color:DARKSLATEGRAY;"> - Molecular models for post-meiotic male genome reprogramming, S Rousseaux, F Boussouar, J Gaucher, N Reynoird, et al., <b>Systems Biology in Reproductive Medicine</b>, 2010 </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/20015078/" style="color:DARKSLATEGRAY;"> - From meiosis to postmeiotic events: The secrets of histone disappearance, J Gaucher, N Reynoird, et al., <b>FEBS J</b>, 2010. Review </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/18413057/" style="color:DARKSLATEGRAY;"> - Epigenetic reprogramming of the male genome during gametogenesis and in the zygote, S Rousseaux, N Reynoird, et al., <b>Reprod Biomed Online</b>, 2008. Review </a <br>
 </p>
