--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: REYNOIRD Lab
 ---
 
-<meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer. We are part of the Institute for Advanced Biosciences, based in Grenoble, France."/>
+<meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer. We are part of the Institute for Advanced Biosciences, based in Grenoble, France (PI: Dr Nicolas Reynoird)."/>
 
 		     <h1> Welcome to the REYNOIRD lab! </h1> 
 
