--- a/People/index.html
+++ b/People/index.html
@@ -2,7 +2,10 @@
 layout: default
 title: People
 ---
-	<h1>Reynoird Lab - {{ page.title }}</h1>
+<meta name="description" content="The Reynoird Lab is directed by Dr Nicolas REYNOIRD, CRCN CNRS."/>
+
+
+<h1>Reynoird Lab - {{ page.title }}</h1>
 
 
 <img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="215" alt="Reynoird lab 1"/> <img src="https://reynoird-lab.github.io/Images/TOM_3857.jpg" alt="Reynoird lab 2" width="215" /> <img src="https://reynoird-lab.github.io/Images/TOM_3773.jpg" alt="Reynoird lab 3" width="215" />
