--- a/People/index.html
+++ b/People/index.html
@@ -21,9 +21,9 @@ title: People
 <br>
 <a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Jessica Vayr: </b><br><i>Project Engineer (IE)</i><br></p> 
 <br>  
-<img alt="NEH" src="https://reynoird-lab.github.io/Images/Ludivine_Bischoff.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Ludivine Bischoff: </b><br><i>Master 2 student</i><br>
+<img alt="NEH" src="https://reynoird-lab.github.io/Images/Ludivine_Bischoff.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Ludivine Bischoff: </b><br><i>Master 2 student</i><br>
 <br>  
-<img alt="NEH" src="https://reynoird-lab.github.io/Images/Nour_Hussein.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Nour Jamal El Hussein: </b><br><i>Master 2 student</i><br></p> 
+<img alt="NEH" src="https://reynoird-lab.github.io/Images/Nour_Hussein.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Nour Jamal El Hussein: </b><br><i>Master 2 student</i><br></p> 
 <br>  
-<img alt="NEH" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Marianne Guilbard: </b><br><i>Master 1 student</i><br>
+<img alt="NEH" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Marianne Guilbard: </b><br><i>Master 1 student</i><br>
 <br><br> <br> <br> <br> </p>
