--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: REYNOIRD Lab
 ---
 
 <meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer. We are part of the Institute for Advanced Biosciences, based in Grenoble, France (PI: Dr Nicolas Reynoird)."/>
+<meta name="msvalidate.01" content="EEB1EF0BB74CDA17BF4E1D2C3425D8EA"/>
 
 		     <h1> Welcome to the REYNOIRD lab! </h1> 
 
