--- a/Research/index.html
+++ b/Research/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Research
 ---
-<meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer."/>
+<meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer. We are based at the Institute for Advanced Biosciences, in Grenoble, France"/>
 
 	<h1>Reynoird Lab - {{ page.title }}</h1>
 		
