--- a/People/index.html
+++ b/People/index.html
@@ -17,13 +17,10 @@ title: People
 <br>
 <a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Tanveer Ahmad, PhD: </b><br><i>Postdoc</i><br></p>
 <br>  
+<img alt="NEH" src="https://reynoird-lab.github.io/Images/Ludivine_Bischoff.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Ludivine Bischoff: </b><br><i>PhD student</i><br>
+<br>
 <a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> </a> <p><b>Alexandre Casanova: </b><br><i>PhD student</i><br></p> 
 <br>
 <a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Jessica Vayr: </b><br><i>Project Engineer (IE)</i><br></p> 
 <br>  
-<img alt="NEH" src="https://reynoird-lab.github.io/Images/Ludivine_Bischoff.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Ludivine Bischoff: </b><br><i>Master 2 student</i><br>
-<br>  
-<img alt="NEH" src="https://reynoird-lab.github.io/Images/Nour_Hussein.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Nour Jamal El Hussein: </b><br><i>Master 2 student</i><br></p> 
-<br>  
-<img alt="NEH" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Marianne Guilbard: </b><br><i>Master 1 student</i><br>
 <br><br> <br> <br> <br> </p>
