--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -14,7 +14,7 @@ title: Alumni
 <br>
 		<a href="https://greenlab.umbc.edu/people/"> <img src="https://reynoird-lab.github.io/Images/Sabeen_Ikram.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Sabeen Ikram</b> <br><i> Visiting PhD student from Maryland University (Green Lab)</i></p>	
 <br>
-		<img src="https://reynoird-lab.github.io/Images/Nour_Hussein.jpg.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Nour El Hussein</b> <br><i>Master 2 student</i></p>	
+		<img src="https://reynoird-lab.github.io/Images/Nour_Hussein.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Nour El Hussein</b> <br><i>Master 2 student</i></p>	
 <br>
 		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Xue Yang</b> <br><i>Master 2 student</i></p>	
 <br>
