--- a/Publications/index.html
+++ b/Publications/index.html
@@ -8,10 +8,15 @@ title: Publications
 
 <a href="https://pubmed.ncbi.nlm.nih.gov/?term=reynoird+N"> <img alt="PUBMED REYNOIRD" src="https://reynoird-lab.github.io/Images/PUBMED.png" style="margin: 0px 20px 20px 20px;" height="75"></a>
 
+<h2> <i> Recent publications </i> </h2>
+<p>
+<a href="https://pubmed.ncbi.nlm.nih.gov/34686315/" style="color:DARKSLATEGRAY;"> - Aberrant RNA methylation triggers recruitment of an alkylation repair complex, N Tsao, (...), N Reynoird and N Mosammaparast, <b>Mol Cell</b>, 2021 </a <br>
+<br> <a href="https://pubmed.ncbi.nlm.nih.gov/31894745/" style="color:DARKSLATEGRAY;"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, <b>Curr Protein Pept Sci</b>, 2020 </a <br>
+<br>
+
 <h2> <i> Selected publications </i> </h2>
 <p>
-<a href="https://pubmed.ncbi.nlm.nih.gov/31894745/" style="color:DARKSLATEGRAY;"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, <b>Curr Protein Pept Sci</b>, 2020 </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/29076964/" style="color:DARKSLATEGRAY;"> - Lysine methylation signaling in pancreatic cancer, G Roth, A Casanova, N Lemonnier and N Reynoird, <b>Curr opin oncol</b>, 2018 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/29076964/" style="color:DARKSLATEGRAY;"> - Lysine methylation signaling in pancreatic cancer, G Roth, A Casanova, N Lemonnier and N Reynoird, <b>Curr opin oncol</b>, 2018 </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/30713830/" style="color:DARKSLATEGRAY;"> - Novel insights into the oncogenic function of the SMYD3 lysine methyltransferase, P Mazur, O Gozani, J Sage and N Reynoird, <b>Transl Cancer Res.</b>, 2016 </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/26988419/" style="color:DARKSLATEGRAY;"> - Coordination of stress signals by the lysine methyltransferase SMYD2 promotes pancreatic cancer, N Reynoird*, P Mazur* et al., <b>Gene & Dev</b>, 2016. *equal contribution </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/25795785/" style="color:DARKSLATEGRAY;"> - A Proteomic Strategy Identifies Lysine Methylation of Splicing Factor snRNP70 by SETMAR, SM Carlson, KE Moore, SM Sankaran, N Reynoird, et al., <b>J Biol Chem</b>, 2015 </a <br>
