--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ title: REYNOIRD Lab
 <div><img src="Images/IAB.jpg" title="Reynoird lab IAB" align="left" width="700" style="margin: 0px 20px 0px 0px;"/><p align="bottom" align="justify"><i><h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</p></i></h2>
 </div><div><p align="justify">Lysine methylation is a covalent post-translational modification (PTM) contributing to all aspects of cell biology, and which deregulation often leads to human pathologies such as cancer. 
 	Our group was created in 2017 and is currently hosted within Pr. Hainaut lab at the Institute for Advanced Biosciences, in the great surroundings of Grenoble, FRANCE.</p> <br>
-<div><img src="Images/grenoblearea.jpg" title="Grenoble area" align="left" width="700" style="margin: 0px 20px 0px 0px;"/> </div> 
-<br><p align="justify"><i>We would be extremely happy to welcome you in our laboratory for a student internship. We are also looking for a PhD student or a postdoctoral researcher: please provide your CV and a motivation letter describing your research interests. Feel free to contact us for any inquiries! </i> 
+<div><img src="Images/grenoblearea.jpg" title="Grenoble area" align="left" width="700" style="margin: 0px 20px 0px 20px;"/> </div> 
+<p align="justify"><i>We would be extremely happy to welcome you in our laboratory for a student internship. We are also looking for a PhD student or a postdoctoral researcher: please provide your CV and a motivation letter describing your research interests. Feel free to contact us for any inquiries! </i> 
 	</p>
 	<br><br><br><br><br><br><br>
 
