--- a/People/index.html
+++ b/People/index.html
@@ -22,5 +22,9 @@ title: People
 <img alt="NEH" src="https://reynoird-lab.github.io/Images/Ludivine_Bischoff.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Ludivine Bischoff: </b><br><i>PhD student</i><br>
 <br>
 <a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Jessica Vayr: </b><br><i>Project Engineer (IE)</i><br></p> 
+<br>
+<a <img alt="EF" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Emilie Froeliger: </b><br><i>Master 1 trainee</i><br></p> 
+<br>
+<a <img alt="VB" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Vincent Boursier: </b><br><i>Master 2 trainee</i><br></p> 
 <br>  
 <br><br> <br> <br> <br> </p>
