--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -7,6 +7,7 @@ title: Alumni
 <img src="https://reynoird-lab.github.io/Images/sortie_parc.jpg" alt="Reynoird lab retreat 1" width="215" /> <img src="https://reynoird-lab.github.io/Images/grenoble.jpg" width="215" /> <img src="https://reynoird-lab.github.io/Images/sortie_resto.jpg" alt="Reynoird lab retreat 2" width="215" />
 
 <p>
+		<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> </a> <p><b>Alexandre Casanova: </b><br><i>Postdoc</i><br></p> 
 <br>
 		<a href="https://www.researchgate.net/profile/Valentina_Lukinovic"> <img alt="VL" src="https://reynoird-lab.github.io/Images/valentina_lukinovic.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Valentina Lukinovic</b><br> <i>postdoctoral researcher</i></p>  
 <br>
