--- a/Contact/index.html
+++ b/Contact/index.html
@@ -13,7 +13,7 @@ title: Contact
 	REYNOIRD group </b><br>
 	<br> <a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr" style="color:DARKSLATEGRAY;">email to N. Reynoird</a> <br>
 phone +33 (0)4 76 54 95 76 <br>
-	
+	<a href="https://doi.org/10.1158/2159-8290.CD-21-0205 "style="color:DARKSLATEGRAY;"> https://twitter.com/reynoirdlab </a> <br>
 
 <br> 
 <img src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="300" style="margin: 0px 20px 0px 0px;" align="top"  br clear="left" /><br>
