--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -30,4 +30,8 @@ title: Alumni
 		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Nadia Cote</b> <br><i>L3 student</i></p>
 <br>
 		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Olivier Leclaire </b><br><i>L3 student</i></p>  
+<br>
+		<img alt="EF" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Emilie Froeliger: </b><br><i>Master 1 trainee</i><br></p> 
+<br>
+		<img alt="VB" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Vincent Boursier: </b><br><i>Master 2 trainee</i><br></p> 
 </p>
