--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -11,7 +11,7 @@ title: Alumni
 <br><br>
 		<a href="https://www.researchgate.net/profile/Valentina_Lukinovic"> <img alt="VL" src="https://reynoird-lab.github.io/Images/valentina_lukinovic.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Valentina Lukinovic</b><br> <i>postdoctoral researcher (Biggar lab, Carleton Univ, Canada)</i></p>  
 <br>
-		<a href="https://www.researchgate.net/profile/Gael_Roth"> <img alt=GR" src="https://reynoird-lab.github.io/Images/gael_roth.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Gael Roth</b> <br><i>Thoracic Oncologist (CHUGA, France)</i></p> 
+		<a href="https://www.researchgate.net/profile/Gael_Roth"> <img alt=GR" src="https://reynoird-lab.github.io/Images/gael_roth.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Gael Roth</b> <br><i>Digestive oncologist (CHUGA, France)</i></p> 
 <br>
 		<a href="https://greenlab.umbc.edu/people/"> <img src="https://reynoird-lab.github.io/Images/Sabeen_Ikram.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Sabeen Ikram</b> <br><i> Visiting PhD student from Maryland University (Green Lab, Maryland Univ, USA)</i></p>	
 <br>
