--- a/Publications/index.html
+++ b/Publications/index.html
@@ -10,10 +10,13 @@ title: Publications
 
 <h2> <i> Recent publications </i> </h2>
 <p>
+<a href="https://pubmed.ncbi.nlm.nih.gov/36522330/" style="color:DARKSLATEGRAY;"> - Structural insights into p300 regulation and acetylation-dependent genome organisation, Z Ibrahim, (...), N Reynoird, (...) and D Panne, <b>Nat Commun.</b>, 2022 </a <br>
+<br>
 <a href="https://pubmed.ncbi.nlm.nih.gov/35819319/" style="color:DARKSLATEGRAY;"> - SMYD3 impedes small cell lung cancer sensitivity to alkylation damage through RNF113A methylation-phosphorylation crosstalk, V Lukinovic, S Hausmann, G Roth, C Oyeniran, (...), and N Reynoird, <b>Cancer Discovery</b>, 2022 </a <br>
 <br>
 <a href="https://pubmed.ncbi.nlm.nih.gov/34686315/" style="color:DARKSLATEGRAY;"> - Aberrant RNA methylation triggers recruitment of an alkylation repair complex, N Tsao, (...), N Reynoird and N Mosammaparast, <b>Mol Cell</b>, 2021 </a <br>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/31894745/" style="color:DARKSLATEGRAY;"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, <b>Curr Protein Pept Sci</b>, 2020 </a <br>
+<br> 
+<a href="https://pubmed.ncbi.nlm.nih.gov/31894745/" style="color:DARKSLATEGRAY;"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, <b>Curr Protein Pept Sci</b>, 2020 </a <br>
 </p>
 <br>
 <h2> <i> Selected publications </i> </h2>
