--- a/People/index.html
+++ b/People/index.html
@@ -21,8 +21,8 @@ title: People
 <br>
 <a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Jessica Vayr: </b><br><i>Project Engineer (IE)</i><br></p> 
 <br>
-<img alt="TA" src="https://reynoird-lab.github.io/Images/logo_scientist.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Emilie Froeliger:</b><br><i>M2 student</i><br></p>
+<img alt="TA" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Emilie Froeliger:</b><br><i>M2 student</i><br></p>
 <br>
-<img alt="TA" src="https://reynoird-lab.github.io/Images/logo_scientist.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Catherine Côté: </b><br><i>L3 student (Sherbrooke University, Canada)</i><br></p>
+<img alt="TA" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Catherine Côté: </b><br><i>L3 student (Sherbrooke University, Canada)</i><br></p>
 <br>
 <br><br> <br> <br> <br> </p>
