--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -7,13 +7,13 @@ title: Alumni
 <img src="https://reynoird-lab.github.io/Images/sortie_parc.jpg" alt="Reynoird lab retreat 1" width="215" /> <img src="https://reynoird-lab.github.io/Images/grenoble.jpg" width="215" /> <img src="https://reynoird-lab.github.io/Images/sortie_resto.jpg" alt="Reynoird lab retreat 2" width="215" />
 
 <p>
-		<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> </a> <p><b>Alexandre Casanova: </b><br><i>postdoctoral researcher (Kouzarides Lab, Cambridge Univ, UK)</i><br></p> 
+		<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> </a> <p><b>Alexandre Casanova: </b><br><i>--> postdoctoral researcher (Kouzarides Lab, Cambridge Univ, UK)</i><br></p> 
 <br><br>
-		<a href="https://www.researchgate.net/profile/Valentina_Lukinovic"> <img alt="VL" src="https://reynoird-lab.github.io/Images/valentina_lukinovic.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Valentina Lukinovic</b><br> <i>postdoctoral researcher (Biggar lab, Carleton Univ, Canada)</i></p>  
+		<a href="https://www.researchgate.net/profile/Valentina_Lukinovic"> <img alt="VL" src="https://reynoird-lab.github.io/Images/valentina_lukinovic.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Valentina Lukinovic</b><br> <i>--> postdoctoral researcher (Biggar lab, Carleton Univ, Canada)</i></p>  
 <br>
-		<a href="https://www.researchgate.net/profile/Gael_Roth"> <img alt=GR" src="https://reynoird-lab.github.io/Images/gael_roth.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Gael Roth</b> <br><i>Digestive oncologist (CHUGA, France)</i></p> 
+		<a href="https://www.researchgate.net/profile/Gael_Roth"> <img alt=GR" src="https://reynoird-lab.github.io/Images/gael_roth.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Gael Roth</b> <br><i>--> Digestive oncologist (CHUGA, France)</i></p> 
 <br>
-		<a href="https://greenlab.umbc.edu/people/"> <img src="https://reynoird-lab.github.io/Images/Sabeen_Ikram.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Sabeen Ikram</b> <br><i> Visiting PhD student from Maryland University (Green Lab, Maryland Univ, USA)</i></p>	
+		<a href="https://greenlab.umbc.edu/people/"> <img src="https://reynoird-lab.github.io/Images/Sabeen_Ikram.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Sabeen Ikram</b> <br><i>Visiting PhD student from Maryland University (Green Lab, Maryland Univ, USA)</i></p>	
 <br>
 		<img src="https://reynoird-lab.github.io/Images/Nour_Hussein.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Nour El Hussein</b> <br><i>Master 2 student</i></p>	
 <br>
