--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: REYNOIRD Lab
 
 		     <h1> Welcome to the REYNOIRD lab! </h1> 
 
-		<h2>Lysine methylation-based cell signaling in cancer</h2>
+		<h2>Protein methylation dynamics in cancer </h2>
 	
 
 <div><img src="Images/IAB.jpg" title="Reynoird lab IAB" align="left" width="700" style="margin: 0px 20px 20px 0px;"/><p align="bottom" align="justify"><i><h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</p></i></h2>
