--- a/People/index.html
+++ b/People/index.html
@@ -13,7 +13,7 @@ title: People
 <br>
 <p><br>
 <a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Nicolas REYNOIRD, PhD:</b> <br><i>Group Leader</i></p>  
-<a href="https://publons.com/researcher/3858992/nicolas-reynoird/"> <img alt="Publons Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/publons-logo.jpg" style="margin: 0px 20px 10px 0px;" width="100"/></a> <br>  
+<a href="https://pubmed.ncbi.nlm.nih.gov/?sort=pubdate&term=Reynoird+N&cauthor_id=34686315"> <img alt="Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/PUBMED.png" style="margin: 0px 20px 10px 0px;" width="100"/></a> <br>  
 <br>
 <a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Tanveer Ahmad, PhD: </b><br><i>Postdoc</i><br></p>
 <br>  
