--- a/Contact/index.html
+++ b/Contact/index.html
@@ -13,7 +13,7 @@ title: Contact
 	</b><br>
 	<br> <a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr" style="color:DARKSLATEGRAY;">email to N. Reynoird</a> <br>
 phone +33 (0)4 76 54 95 76 <br>
-	<a href="https://twitter.com/reynoirdlab "style="color:DARKSLATEGRAY;"> reynoirdlab </a> src="https://reynoird-lab.github.io/Images/twitter.png" style="margin: 0px 20px 10px 0px;" width="100"/></a> <br>
+	<a href="https://twitter.com/reynoirdlab"> <img src="https://reynoird-lab.github.io/Images/twitter.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a <p><b> reynoirdlab </b></p> <br>
 
 <br> 
 <img src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="300" style="margin: 0px 20px 0px 0px;" align="top"  br clear="left" /><br>
