--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ title: REYNOIRD Lab
 <br>
 <br>
 
-<div><img src="Images/IAB.jpg" title="Reynoird lab IAB" align="left" width="700" style="margin: 0px 20px 0px 0px;"/><p align="bottom" align="justify"><i><h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</p></i></h2>
+<div><img src="Images/IAB.jpg" title="Reynoird lab IAB" align="left" width="700" style="margin: 0px 20px 0px 0px;"/><p align="bottom" align="justify"><i><h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in cancer.</p></i></h2>
 <p align="justify">Lysine methylation is a covalent post-translational modification (PTM) contributing to all aspects of cell biology, and which deregulation often leads to human pathologies such as cancer.</p>
 <div><img src="Images/grenoblearea.jpg" title="Grenoble area" align="left" width="700" style="margin: 0px 20px 20px 0px;"/> </div> 
 <p align="justify">Our group exists since 2017 and was officially created in 2023 as an emerging team from the Institute for Advanced Biosciences, in the great surroundings of Grenoble, FRANCE.</p>
-<p align="justify"><i>We are keen to consider applications in our laboratory for a student internship, as well as for a PhD or a postdoctoral projects: please provide your CV and a motivation letter describing your research interests. Feel free to contact us for any inquiries! </i> 
+<p align="justify"><i>We are keen to consider applications in our laboratory for a student internship, as well as for a PhD or a postdoctoral project: please provide your CV and a motivation letter. Feel free to contact us for any inquiries! </i> 
 	</p>
 	<br><br><br><br><br><br><br>
 
