--- a/People/index.html
+++ b/People/index.html
@@ -23,7 +23,7 @@ title: People
 <br>
 <img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Emilie Froeliger:</b><br><i>M2 student</i><br></p>
 <br>
-<img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Lilly Erhart: </b><br><i>M1 student (Grenoble University)</i><br></p>
+<img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Lilly Erhart: </b><br><i>M1 student</i><br></p>
 <br>
-<img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Vsevolod Zvezdin: </b><br><i>M1 student (Grenoble University)</i><br></p>  
+<img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Vsevolod Zvezdin: </b><br><i>M1 student</i><br></p>  
 <br><br> <br> <br> <br> </p>
