--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -19,7 +19,7 @@ title: Alumni
 <br>
 		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Xue Yang</b> <br><i>Master 2 student</i></p>	
 <br>
-		<img alt="VB" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Vincent Boursier: </b><br><i>Master 2 trainee</i><br></p> 
+		<img alt="VB" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Vincent Boursier </b><br><i>Master 2 trainee</i><br></p> 
 <br>
 		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Marianne Guilbard</b> <br><i>Master 1 student</i></p>
 <br>
