--- a/People/index.html
+++ b/People/index.html
@@ -12,14 +12,14 @@ title: People
 
 <br>
 <p><br>
-<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Nicolas REYNOIRD, PhD:</b> <br><i>Group Leader</i></p>  
+<img alt="Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Nicolas REYNOIRD, PhD:</b> <br><i>Group Leader</i></p>  
 <a href="https://pubmed.ncbi.nlm.nih.gov/?sort=pubdate&term=Reynoird+N&cauthor_id=34686315"> <img alt="Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/PUBMED.png" style="margin: 0px 20px 10px 0px;" width="100"/></a> <br>  
 <br>
-<a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Tanveer Ahmad, PhD: </b><br><i>Postdoctoral fellow</i><br></p>
+<img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Tanveer Ahmad, PhD: </b><br><i>Postdoctoral fellow</i><br></p>
 <br>  
-<a href="https://www.linkedin.com/in/bischoff-ludivine/"> <img alt="LB" src="https://reynoird-lab.github.io/Images/Ludivine_Bischoff.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Ludivine Bischoff: </b><br><i>PhD student</i><br>
+<img alt="LB" src="https://reynoird-lab.github.io/Images/Ludivine_Bischoff.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Ludivine Bischoff: </b><br><i>PhD student</i><br>
 <br>
-<a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Jessica Vayr: </b><br><i>Project Engineer (IE)</i><br></p> 
+<img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Jessica Vayr: </b><br><i>Project Engineer (IE)</i><br></p> 
 <br>
 <img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Emilie Froeliger:</b><br><i>M2 student</i><br></p>
 <br>
