--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: REYNOIRD Lab
 
 <meta name="description" content="The Reynoird Lab focuses its research on protein methylation signaling in cancer. We are part of the Institute for Advanced Biosciences, based in Grenoble, France (PI: Dr Nicolas Reynoird)."/>
 
-		     <h1> Welcome to the REYNOIRD lab! </h1> 
+		     <h1> Welcome to the Reynoird lab! </h1> 
 
 		<h2>Protein methylation dynamics in cancer </h2>
 <br>
