--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: REYNOIRD Lab
+title: Reynoird Lab
 ---
 
 <meta name="description" content="The Reynoird Lab focuses its research on protein methylation signaling in cancer. We are part of the Institute for Advanced Biosciences, based in Grenoble, France (PI: Dr Nicolas Reynoird)."/>
