--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@ title: Reynoird Lab
 <p align="justify">Lysine methylation is a covalent post-translational modification (PTM) contributing to all aspects of cell biology, and which deregulation often leads to human pathologies such as cancer.</p>
 <div><img src="Images/grenoblearea.jpg" title="Grenoble area" align="left" width="700" style="margin: 0px 20px 20px 0px;"/> </div> 
 <p align="justify">Our group exists since 2017 and was officially created in 2023 as an emerging team from the Institute for Advanced Biosciences, in the great surroundings of Grenoble, FRANCE.</p>
-<p align="justify"><b>A PhD position is available in the lab with funding, and we seek for a motivated PhD student to start on October 2023: please provide your CV and a motivation letter.</b> 
-	</p>
+
 <p align="justify"><i>We are keen to consider applications in our laboratory for a student internship, as well as for a PhD or a postdoctoral project: please provide your CV and a motivation letter. Feel free to contact us for any inquiries! </i> 
+	</p>
+<div><img src="Images/PhD.jpg" title="PhD offer" align="left" width="200" style="margin: 0px 20px 0px 0px;"/><p align="bottom" align="justify"><b>A PhD position is available in the lab with funding, and we seek for a motivated PhD student to start on October 2023: please provide your CV and a motivation letter.</b> 
 	</p>
 	<br><br><br><br><br><br><br>
 
