--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -21,6 +21,10 @@ title: Alumni
 <br>
 		<img alt="VB" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Vincent Boursier </b><br><i>Master 2 trainee</i><br></p> 
 <br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Lilly Erhart</b> <br><i>Master 1 student</i></p>
+<br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Vsevolod Zvezdin</b> <br><i>Master 1 student</i></p>
+<br>
 		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Marianne Guilbard</b> <br><i>Master 1 student</i></p>
 <br>
 		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Lea Baudret</b> <br><i>Master 1 student</i></p>
@@ -33,6 +37,4 @@ title: Alumni
 <br>
 		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Olivier Leclaire </b><br><i>L3 student</i></p>  
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Catherine Cote </b><br><i>L3 student</i></p>  
-
 </p>
