--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -13,7 +13,7 @@ title: Alumni
 <br>
 		<a href="https://www.researchgate.net/profile/Gael_Roth"> <img alt=GR" src="https://reynoird-lab.github.io/Images/gael_roth.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Gael Roth</b> <br><i>--> Digestive oncologist (CHUGA, France)</i></p> 
 <br>
-		<a href="https://greenlab.umbc.edu/people/"> <img src="https://reynoird-lab.github.io/Images/Sabeen_Ikram.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Sabeen Ikram</b> <br><i>Visiting PhD student from Maryland University (Green Lab, Maryland Univ, USA)</i></p>	
+		<a href="https://greenlab.umbc.edu/people/"> <img src="https://reynoird-lab.github.io/Images/Sabeen_Ikram.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Sabeen Ikram</b> <br><i>Visiting PhD student from Maryland University (Green Lab, Maryland Univ, USA) --> now postdoctoral researcher (Gozani Lab, Stanford Univ, USA)</i><br></p> 
 <br>
 		<img src="https://reynoird-lab.github.io/Images/Nour_Hussein.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Nour El Hussein</b> <br><i>Master 2 student</i></p>	
 <br>
