--- a/Publications/index.html
+++ b/Publications/index.html
@@ -10,6 +10,8 @@ title: Publications
 
 <h2> <i> Recent publications </i> </h2>
 <p>
+<a href="https://pubmed.ncbi.nlm.nih.gov/37976356/" style="color:DARKSLATEGRAY;"> - The SMYD3-MAP3K2 signaling axis promotes tumor aggressiveness and metastasis in prostate cancer, S Ikram , A Rege, M Negesse, A G Casanova , N Reynoird, E M Green, <b>Science Advances.</b>, 2023 </a <br>
+<br>
 <a href="https://pubmed.ncbi.nlm.nih.gov/37630248/" style="color:DARKSLATEGRAY;"> - Natural and Synthetic Anticancer Epidrugs Targeting the Epigenetic Integrator UHRF1, W Ashraf, T Ahmad, N Reynoird, A Hamiche, Y Mély, C Bronner and M Mousline, <b>Molecules.</b>, 2023 </a <br>
 <br>
 <a href="https://pubmed.ncbi.nlm.nih.gov/36522330/" style="color:DARKSLATEGRAY;"> - Structural insights into p300 regulation and acetylation-dependent genome organisation, Z Ibrahim, (...), N Reynoird, (...) and D Panne, <b>Nat Commun.</b>, 2022 </a <br>
