--- a/Publications/index.html
+++ b/Publications/index.html
@@ -10,6 +10,8 @@ title: Publications
 
 <h2> <i> Recent publications </i> </h2>
 <p>
+<a href="https://link.springer.com/article/10.1038/s41421-023-00644-x?utm_source=rct_congratemailt&utm_medium=email&utm_campaign=oa_20240131&utm_content=10.1038/s41421-023-00644-x" style="color:DARKSLATEGRAY;"> - Cytoskeleton remodeling induced by SMYD2 methyltransferase drives breast cancer metastasis, A Casanova, (...) and N Reynoird, <b>Cell Discovery</b>, 2024 </a <br>
+<br>
 <a href="https://pubmed.ncbi.nlm.nih.gov/37976356/" style="color:DARKSLATEGRAY;"> - The SMYD3-MAP3K2 signaling axis promotes tumor aggressiveness and metastasis in prostate cancer, S Ikram , A Rege, M Negesse, A G Casanova , N Reynoird, E M Green, <b>Science Advances.</b>, 2023 </a <br>
 <br>
 <a href="https://pubmed.ncbi.nlm.nih.gov/37630248/" style="color:DARKSLATEGRAY;"> - Natural and Synthetic Anticancer Epidrugs Targeting the Epigenetic Integrator UHRF1, W Ashraf, T Ahmad, N Reynoird, A Hamiche, Y Mély, C Bronner and M Mousline, <b>Molecules.</b>, 2023 </a <br>
