--- a/People/index.html
+++ b/People/index.html
@@ -23,6 +23,10 @@ title: People
 <br>
 <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Jessica Vayr: </b><br><i>Project Engineer (IE)</i><br></p> 
 <br>
+<img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Razane Beyh:</b><br><i>Master student</i><br></p>
+<br>
+<img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Yoana Yankulova:</b><br><i>Master student</i><br></p>
+<br>
 <img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Maybe you?</b><br><i></i><br></p>
 <br>
 <br><br> <br> <br> <br> </p>
