--- a/People/index.html
+++ b/People/index.html
@@ -27,6 +27,6 @@ title: People
 <br>
 <img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Yoana Yankulova:</b><br><i>Master student</i><br></p>
 <br>
-<img alt="trainee" src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Maybe you?</b><br><i></i><br></p>
+<img alt="trainee" src="https://reynoird-lab.github.io/Images/yoana.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Maybe you?</b><br><i></i><br></p>
 <br>
 <br><br> <br> <br> <br> </p>
