--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -23,7 +23,7 @@ title: Alumni
 <br>		
 		<img src="https://reynoird-lab.github.io/Images/Razane.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Razane Beyh</b> <br><i>Master 1 student</i></p>	
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Lilly Erhart</b> <br><i>Master 1 student</i></p>
+		<img src="https://reynoird-lab.github.io/Images/lilly.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Lilly Erharter</b> <br><i>Master 1 student</i></p>
 <br>
 		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Vsevolod Zvezdin</b> <br><i>Master 1 student</i></p>
 <br>
