--- a/People/index.html
+++ b/People/index.html
@@ -12,7 +12,7 @@ title: People
 
 <br>
 <p><br>
-<img alt="Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/reynoird.jpeg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Nicolas REYNOIRD, PhD:</b> <br><i>Group Leader</i></p>  
+<img alt="Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/reynoird.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Nicolas REYNOIRD, PhD:</b> <br><i>Group Leader</i></p>  
 <a href="https://pubmed.ncbi.nlm.nih.gov/?sort=pubdate&term=Reynoird+N&cauthor_id=34686315"> <img alt="Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/PUBMED.png" style="margin: 0px 20px 10px 0px;" width="100"/></a> <br>  
 <br>
 <img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/> <p><b>Tanveer Ahmad, PhD: </b><br><i>Postdoctoral fellow</i><br></p>
