--- a/Media coverage/index.html
+++ b/Media coverage/index.html
@@ -9,7 +9,7 @@ title: Media coverage
 <div class="div-categoryContainer">
 	<img src="https://reynoird-lab.github.io/Images/MESR.png" title="MESR" width="220" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <div class="paragraph-right">
-  <p align="justify"> Dr Reynoird interviewed by the French Ministery of education and research (in french) here: <a href="https://www.enseignementsup-recherche.gouv.fr/fr/interview-de-nicolas-reynoird-les-avancees-de-la-recherche-sur-le-cancer-du-sein-97714" "style="color:DARKSLATEGRAY;"> Interview de Nicolas Reynoird : les avancées de la recherche sur le cancer du sein </a> </p> 
+  <p align="justify"> Dr Reynoird was interviewed by the French Ministery of education and research (in french) here for "Octobre rose" and the research against breast cancer : <a href="https://www.enseignementsup-recherche.gouv.fr/fr/interview-de-nicolas-reynoird-les-avancees-de-la-recherche-sur-le-cancer-du-sein-97714" "style="color:DARKSLATEGRAY;"> Interview de Nicolas Reynoird : les avancées de la recherche sur le cancer du sein </a> </p> 
 	 </div>
 </div>
 
