--- a/Media coverage/index.html
+++ b/Media coverage/index.html
@@ -7,7 +7,10 @@ title: Media coverage
 	<h1>Reynoird Lab - {{ page.title }}</h1>
 
 <img src="https://reynoird-lab.github.io/Images/MESR.png" title="MESR" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
-  <p align="justify"> Dr Reynoird is interviewed by the French Ministery of education and research (in french) here for "Octobre rose" and the research against breast cancer : <a href="https://www.enseignementsup-recherche.gouv.fr/fr/interview-de-nicolas-reynoird-les-avancees-de-la-recherche-sur-le-cancer-du-sein-97714" "style="color:DARKSLATEGRAY;"> Interview de Nicolas Reynoird : les avancées de la recherche sur le cancer du sein </a> </p>
+  <p align="justify"> Dr Reynoird was interviewed by the French Ministery of education and research (in french) here for "Octobre rose" and the research against breast cancer : <a href="https://www.enseignementsup-recherche.gouv.fr/fr/interview-de-nicolas-reynoird-les-avancees-de-la-recherche-sur-le-cancer-du-sein-97714" "style="color:DARKSLATEGRAY;"> Interview de Nicolas Reynoird : les avancées de la recherche sur le cancer du sein </a> </p>
+	<hr>
+<img src="https://reynoird-lab.github.io/Images/logo_cnrs.jpg" title="CNRS" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by France 3 (in french) here : <a href="https://www.cnrs.fr/fr/presse/traitement-du-cancer-du-sein-agressif-decouverte-dune-nouvelle-proteine-participant-au" "style="color:DARKSLATEGRAY;"> Traitement du cancer du sein agressif : Découverte d’une nouvelle protéine participant au développement de métastases </a> </p>
 	<hr>
 <img src="https://reynoird-lab.github.io/Images/logo_inserm.jpg" title="INSERM" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by INSERM (in french) here : <a href="https://www.inserm.fr/actualite/cancer-du-sein-une-piste-pour-bloquer-la-formation-de-metastases/" "style="color:DARKSLATEGRAY;"> Cancer du sein : une piste pour bloquer la formation de métastases </a> </p>
