--- a/Media coverage/index.html
+++ b/Media coverage/index.html
@@ -19,8 +19,12 @@ title: Media coverage
   <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by the fondation ARC (in french) here : <a href="https://www.fondation-arc.org/pour-lutter-contre-les-cancers-du-sein-avances-deux-pistes-originales" "style="color:DARKSLATEGRAY;"> Pour lutter contre les cancers du sein avancés, deux pistes originales </a> </p>
 	<hr>
 <img src="https://reynoird-lab.github.io/Images/FranceInfo.png" title="France Info" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
-  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by France Info and France 2 (in french) here : <a href="https://www.francetvinfo.fr/sante/cancer/sante-une-decouverte-prometteuse-du-cnrs-contre-le-cancer-du-sein_6338056.html" "style="color:DARKSLATEGRAY;"> Santé : une découverte prometteuse du CNRS contre le cancer du sein</a> </p>
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by France Info (in french) here : <a href="https://www.francetvinfo.fr/sante/cancer/sante-une-decouverte-prometteuse-du-cnrs-contre-le-cancer-du-sein_6338056.html" "style="color:DARKSLATEGRAY;"> Santé : une découverte prometteuse du CNRS contre le cancer du sein</a> </p>
 	<hr>
+<img src="https://reynoird-lab.github.io/Images/France2.jpeg" title="France 2" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+  <p align="justify"> Our work on SMYD2 and breast cancer metastasis was highlighted by France 2 (in french)</p>
+	<iframe width="560" height="315" src="//embed.francetv.fr/ef2921c64158e2b9412954c055565b8f" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<hr> 
 <img src="https://reynoird-lab.github.io/Images/Europe1.png" title="Europe 1" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by EUROPE 1 (in french) here : <a href="https://www.europe1.fr/sante/prevenir-lapparition-des-metastases-le-cnrs-fait-une-decouverte-capitale-pour-lutter-contre-le-cancer-du-sein-4228082" "style="color:DARKSLATEGRAY;"> Prévenir l'apparition des métastases», le CNRS fait une découverte capitale pour lutter contre le cancer du sein </a> </p>
 	<hr>
