--- a/Media coverage/index.html
+++ b/Media coverage/index.html
@@ -32,7 +32,7 @@ title: Media coverage
 <img src="https://reynoird-lab.github.io/Images/France3.jpg" title="Europe 1" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by France 3 (in french) here : <a href="https://france3-regions.francetvinfo.fr/auvergne-rhone-alpes/isere/grenoble/cancer-du-sein-un-laboratoire-de-grenoble-fait-une-decouverte-importante-dans-le-developpement-des-metastases-2916438.html" "style="color:DARKSLATEGRAY;"> Cancer du sein : un laboratoire de Grenoble fait une découverte importante dans le développement des métastases </a> </p>
 	<hr>
-<img src="https://reynoird-lab.github.io/Images/Santemag.jpeg" title="Santé magazine" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
+<img src="https://Reynoird-lab.github.io/Images/Santemag.jpg" title="Santé magazine" width="150" style="margin: 0px 20px 10px 0px;" class="picture-left">
   <p align="justify"> Our work on SMYD2 and breast cancer metastasis is highlighted by France 3 (in french) here : <a href="https://www.santemagazine.fr/actualites/actualites-sante/cancer-du-sein-une-nouvelle-proteine-participant-au-developpement-de-metastases-decouverte-1055720" "style="color:DARKSLATEGRAY;"> Cancer du sein : des chercheurs découvrent une nouvelle protéine participant au développement de métastases </a> </p>
 	<hr>
 
